Prepared traffic (Project5).

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Project1/minesweeper/minesweeper.zip
 Project5/traffic/traffic.zip
 Project5/traffic/gtsrb.zip
 Project5/traffic/gtsrb
+Project5/traffic/Sketch.ipynb
