--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
-Project0/degrees/degrees.zip
-Project0/tictactoe/tictactoe.zip
-Project1/knights/knights.zip
-Project1/minesweeper/minesweeper.zip
-Project5/traffic/traffic.zip
+Project0/degrees.zip
+Project0tictactoe.zip
+Project1/knights.zip
+Project1/minesweeper.zip
+Project2/heredity.zip
+Project3/crossword.zip
+Project3/crossword/assets/
+Project3/crossword/data/
+Project4/nim.zip
+Project4/shopping.zip
+Project5/traffic.zip
 Project5/traffic/gtsrb.zip
 Project5/traffic/gtsrb
 Project5/traffic/Sketch.ipynb
