added directory for p6

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ Project5/traffic.zip
 Project5/traffic/gtsrb.zip
 Project5/traffic/gtsrb
 Project5/traffic/Sketch.ipynb
+Project6/parser.zip
+Project6/parser/sentences/
+Project6/attention.zip
