--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ Project3/crossword.zip
 Project3/crossword/assets/
 Project3/crossword/data/
 Project4/nim.zip
+Project4/nim/__pycache__/
 Project4/shopping.zip
 Project5/traffic.zip
 Project5/traffic/gtsrb.zip
