cleaned up .gitignores

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,10 @@
-Project0/degrees.zip
-Project0tictactoe.zip
-Project1/knights.zip
-Project1/minesweeper.zip
-Project2/heredity.zip
-Project3/crossword.zip
-Project3/crossword/assets/
-Project3/crossword/data/
-Project4/nim.zip
-Project4/nim/__pycache__/
-Project4/shopping.zip
-Project5/traffic.zip
-Project5/traffic/gtsrb.zip
-Project5/traffic/gtsrb
-Project5/traffic/Sketch.ipynb
-Project6/parser.zip
-Project6/parser/sentences/
-Project6/attention.zip
-Project6/attention/*.png
+*assets/
+*data/
+*__pycache__/
+*gtsrb
+*.ipynb
+*sentences/
+*.png
+*.zip
+*small/
+*large/
